--- a/untitled/pom.xml
+++ b/untitled/pom.xml
@@ -22,11 +22,11 @@
             <version>5.5.7.Final</version>
         </dependency>
 
-        <!-- Hibernate JPA -->
+        <!-- Hibernate JPA (incluye la API de JPA) -->
         <dependency>
-            <groupId>org.hibernate.javax.persistence</groupId>
-            <artifactId>hibernate-jpa-2.1-api</artifactId>
-            <version>1.0.2.Final</version>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-entitymanager</artifactId>
+            <version>5.5.7.Final</version>
         </dependency>
 
         <!-- H2 Database -->
