--- a/untitled/pom.xml
+++ b/untitled/pom.xml
@@ -37,6 +37,13 @@
             <scope>runtime</scope>
         </dependency>
 
+        <!-- MySQL Connector/J -->
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.23</version>
+        </dependency>
+
         <!-- Lombok -->
         <dependency>
             <groupId>org.projectlombok</groupId>
